--- a/res/layout/playfield.xml
+++ b/res/layout/playfield.xml
@@ -8,6 +8,7 @@
         android:id="@+id/clickAreaView"
         android:layout_width="480px"
         android:layout_height="360px"
+        android:visibility="gone"
          />
     <ImageView
         android:id="@+id/imageView1"
@@ -25,10 +26,5 @@
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/hello" />
 
 </LinearLayout>
