ZDV: Removed redundant button, fixed mainmenu btn
Removed cancel button
Cleaned up a bit
Fixed ZDV back to mainmenu
Closed database in HighScoreList

--- a/res/layout/score_screen.xml
+++ b/res/layout/score_screen.xml
@@ -34,16 +34,16 @@
 	    android:text="@string/submitScoreString"
 	    ></Button>
 	<Button
-	    android:id="@+id/submitScoreCancelBtn"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:text="@string/submitScoreCancelString"
-	    ></Button>
-	<Button
 	    android:id="@+id/nextImageBtn"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="@string/nextImageString"
+	    ></Button>
+	<Button
+	    android:id="@+id/exitBtn"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:text="@string/exitString"
 	    ></Button>
 
 </LinearLayout>
